# CryptoWebApp

./: .gitignore  README.md  docker-compose.yaml
AnalysisService/: main.py  pyproject.toml
DataAnalysisService/: main.py  pyproject.toml
Documentation/: docker_commands.txt
DynamoDB/: Dockerfile  entrypoint.sh  init_dynamodb.sh
Localstack/: .gitignore  README.md  deploy-local.sh
PostgresDB/: .env.postgres  Dockerfile  README.md  authorised_services.sql  docker-compose.yaml  init_db.sql  init_tables.sql  pg_hba.conf  (+4 more)
UserService/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yaml  main.py  notes.txt  pyproject.toml
UserService/src/: dependencies.py  exceptions.py  main.py
UserService/src/consumer/: kafka.py
UserService/src/db/: database.py  db_context.py  dependencies.py  factory.py  settings.py
UserService/src/repository/implementations/AWS_DynamoDB/: awsdynamodb_UserRepository.py  utils.py
UserService/src/repository/implementations/PostgreSQL/: debezium_config.py  postgres_UserRepository.py
UserService/src/repository/implementations/PostgreSQL/models/: ORM_User.py
UserService/src/repository/interfaces/: interface_UserRepository.py
UserService/src/routes/: UserController.py
UserService/src/schemas/: User.py  UserSchemas.py
UserService/src/service/: UserService.py  utils.py
UserService/tests/integration/: conftest.py  test_api.py
UserService/tests/unit/: test_user_controller.py  test_user_service.py
UserService/tests/unit/repository/: test_postgres_UserRepository.py  test_postgres_repository.py
(+39 files in other folders)
