[project]
name = "userservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.1",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "sqlalchemy-orm>=1.2.10",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0",
    "passlib>=1.7.4",
    "boto3>=1.37.0",
    "aioboto3>=14.1.0",
    "types-aiobotocore-dynamodb>=2.21.1",
    "uuid6>=2024.7.10",
    "aiokafka>=0.12.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=1"
asyncio_default_fixture_loop_scope = "session"